--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       name: 'My Docs',
       basePath: 'docs/',
       loadSidebar: true,
-      search: 'auto'
+      search: 'auto',
     };
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
