--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Graphhub documentation by amirhnajafiz" />
-    <title>Graphhub</title>
+    <meta name="description" content="The Handbook by amirhnajafiz" />
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" />
+
+    <title>The Handbook</title>
+
     <!-- Docsify Style -->
     <link
       rel="stylesheet"
@@ -15,8 +19,8 @@
     <div id="app">Loading...</div>
     <script>
       window.$docsify = {
-        name: "Graphhub",
-        repo: "github.com/amirhnajafiz/graphhub",
+        name: "Handbook",
+        repo: "github.com/amirhnajafiz/handbook",
         basePath: "docs/",
         loadSidebar: true,
         search: "auto",
