add: cover page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         basePath: "docs/",
         loadSidebar: true,
         search: "auto",
+        coverpage: true,
       };
     </script>
     <!-- Docsify Script -->
