--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The Handbook by amirhnajafiz" />
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="public/favicon.ico" />
 
     <title>The Handbook</title>
+
+    <link rel="stylesheet" href="public/style.css" />
 
     <!-- Docsify Style -->
     <link
