--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         loadSidebar: true,
         search: "auto",
         coverpage: true,
+        autoHeader: true,
       };
     </script>
     <!-- Docsify Script -->
