--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         search: "auto",
         coverpage: true,
         autoHeader: true,
+        markdown: {
+          smartypants: true,
+        }
       };
     </script>
     <!-- Docsify Script -->
