fix: sidebar bug

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
         markdown: {
           smartypants: true,
         },
+        subMaxLevel: 0,
+        sidebarDisplayLevel: 0,
+        sidebarCollapse: {
+          collapse: true,
+          hide: false,
+          accordion: true,
+        },
       };
     </script>
     <!-- Docsify Script -->
@@ -45,5 +52,8 @@
 
     <!-- CDN files for docsify-katex -->
     <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
+
+    <!-- Sidebar Collapse Plugin -->
+    <script src="//unpkg.com/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   </body>
 </html>
