--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The Handbook by amirhnajafiz" />
+    <meta name="keywords" content="handbook, amirhnajafiz, docsify" />
+    <meta name="author" content="Amirhossein Najafizadeh" />
+
     <!-- Favicon -->
     <link rel="icon" href="public/favicon.ico" />
 
+    <!-- Title -->
     <title>The Handbook</title>
 
+    <!-- Custome files -->
     <link rel="stylesheet" href="public/style.css" />
 
     <!-- Docsify Style -->
@@ -18,7 +23,10 @@
     />
   </head>
   <body>
+    <!-- Docsify Cover Page -->
     <div id="app">Loading...</div>
+
+    <!-- Docsify -->
     <script>
       window.$docsify = {
         name: "Handbook",
@@ -39,6 +47,7 @@
         },
       };
     </script>
+    
     <!-- Docsify Script -->
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
