--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script>
       window.$docsify = {
         name: "Handbook",
+        homepage: 'home.md',
         repo: "github.com/amirhnajafiz/handbook",
         basePath: "docs/",
         loadSidebar: true,
